mainRepo/MyPracticeExampleJava/src/Inheritance_progs/Test/Test.java
package Inheritance_progs.Test;

import Inheritance_progs.Demo;

public class Test {
    public static void main(String[] args) {
        Demo obj = new Demo();
//        obj.show();//error
    }
}
